<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.shanebeestudios</groupId>
    <artifactId>McDeob</artifactId>
    <version>3.3.0</version>

    <properties>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>paper-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
        </dependency>
        <dependency>
            <groupId>net.md-5</groupId>
            <artifactId>SpecialSource</artifactId>
            <version>1.11.5-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.papermc</groupId>
            <artifactId>patched-spigot-fernflower</artifactId>
            <version>0.1+build.13</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>macos</id>
            <build>
                <plugins>
                    <!-- This is for packaging a macOS app -->
                    <plugin>
                        <groupId>de.perdian.maven.plugins</groupId>
                        <artifactId>macosappbundler-maven-plugin</artifactId>
                        <version>1.21.0</version>
                        <configuration>
                            <dmg>
                                <generate>true</generate>
                                <appendVersion>false</appendVersion>
                                <dmgFileName>${project.name}-${project.version}-macOS</dmgFileName>
                            </dmg>
                            <app>
                                <includeDependencies>false</includeDependencies>
                            </app>
                            <plist>
                                <CFBundleIconFile>src/main/resources/images/1024.icns</CFBundleIconFile>
                                <JVMMainClassName>com.shanebeestudios.mcdeob.McDeob</JVMMainClassName>
                                <JVMVersion>16+</JVMVersion>
                                <JVMOptions>
                                    <string>-Xms3G</string>
                                </JVMOptions>
                            </plist>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>bundle</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources/filtered</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>libs/</classpathPrefix>
                            <mainClass>com.shanebeestudios.mcdeob.McDeob</mainClass>
                            <!-- -NSRequiresAquaSystemAppearance False  -->
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>shade</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>
